# auto_cards

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-lint.yml  python-package.yml
src/: args_parser.py  auto_cards.py  main.py  ollama_src.py  wordnet_src.py
src/auto_cards/: __init__.py  __main__.py  abc_definition_source.py
