[project]
name = "auto-cards"
version = "1.0.0"
description = "Simple cli tool for genrating automatic flashcards (for languages)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "rich>=14.3.0",
    "rich-argparse>=1.7.2",
    "wn>=0.14.0",
]
license-files = ["LICENSE"]

[project.scripts]
auto_cards = "auto_cards.__main__:main"

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"
